# vibez-monitor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md
.workgraph/: drift-policy.toml
backend/: pyproject.toml
backend/scripts/: backfill.py  backfill_links.py  backfill_message_links.py  beeper_api_backfill.py  classify_backfill.py  enrich_link_authors.py  matrix_backfill.py  migrate_to_postgres.py  pgvector_index.py  push_remote.py  refresh_message_links.py  run_sync.py  run_sync_once.py  run_synthesis.py  run_wisdom.py
backend/tests/: conftest.py  test_beeper_sync.py  test_beeper_token.py  test_catchup_db.py  test_classifier.py  test_config.py  test_db.py  test_google_groups_sync.py  test_links.py  test_links_backfill.py  test_links_db.py  test_links_ingestion.py  test_links_refresh.py  test_links_search.py  test_matrix_sync.py  test_model_router.py  test_paia_events_adapter.py  test_pgvector_e2e.py  test_pgvector_integration.py  test_pgvector_scenarios.py  test_profile_e2e.py  test_profile_integration.py  test_profile_scenario.py  test_push_remote.py  test_runtime_contracts.py  test_semantic_index.py  test_sync_jobs.py  test_synthesis.py  test_wisdom.py
backend/vibez/: __init__.py  author_classifier.py  beeper_sync.py  budget_guard.py  chat_agent.py  classifier.py  config.py  db.py  dossier.py  google_groups_sync.py  links.py  matrix_sync.py  model_router.py  paia_events_adapter.py  profile.py  semantic_index.py  synthesis.py  wisdom.py
config/: cognition-presets.toml  model-routing.json
dashboard/: README.md  next.config.ts  (+2 more)
(+158 files in other folders)
