[project]
name = "vibez-monitor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.43",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
]

[tool.hatch.build.targets.wheel]
packages = ["vibez"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
